Fixed broken css on staff page and index page

--- a/Project Management System/wwwroot/css/browseTopics.css
+++ b/Project Management System/wwwroot/css/browseTopics.css
@@ -239,11 +239,12 @@ footer {
 /* This css is for the clear button on the index */
 .clearbtn {
    position: absolute;
-   top: 18%;
+   padding: 10px;
+   top: 23%;
    width: 85px;
    height: 35px;
-   left: 54%;
-   border: 1px solid;
+   left: 52%;
+   border: 2px solid;
    cursor: pointer;
-   border-radius: 4px;
+   border-radius: 8px;
    }
