--- a/Project Management System/wwwroot/css/staffProfile.css
+++ b/Project Management System/wwwroot/css/staffProfile.css
@@ -47,7 +47,7 @@
     position: absolute;
     bottom: 0;
     right: 0;
-    width: 15%;
+    width: 0%;
     height: 100%;
     background-color: #F0F0F0;
 }
@@ -132,9 +132,6 @@
 
 .departmentList li span {
      position: relative;
-     top: 50%;
-     transform: translateY(-50%);
-     padding:20px;
      justify-content: center;
 }
 
